@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12767 2006/02/02 21:29:30 abs Exp $
+$NetBSD: CHANGES,v 1.12768 2006/02/02 23:17:20 abs Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -764,3 +764,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated graphics/netpbm to 10.31nb1 [joerg 2006-02-02]
 	Added chat/xchat-python version 2.4.5 [tron 2006-02-02]
 	Updated archivers/p5-Archive-Tar to 1.28 [abs 2006-02-02]
+	Updated textproc/p5-YAML to 0.57  [abs 2006-02-02]
